.env added and frontend backend connection done

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
-REACT_APP_BACKEND_URL=https://your-backend-url.onrender.com
+REACT_APP_BACKEND_URL=https://auction-platform-7vfe.onrender.com
+SKIP_PREFLIGHT_CHECK=true
+GENERATE_SOURCEMAP=false
+DISABLE_ESLINT_PLUGIN=true
+CI=false
